--- a/templates/page.html
+++ b/templates/page.html
@@ -19,6 +19,7 @@
             <tr> <td> <h2 style='color:#0c08ff' class="USD" align="center"> USD: </h2></td> <td><h2 style='color:#0c08ff' class="USD" align="center">{{ USD }} </h2> </td> </tr>
             <tr> <td> <h2 style='color:#0c08ff' class="EURO" align="center"> EURO: </h2></td> <td><h2 style='color:#0c08ff' class="EURO" align="center">{{ EURO }} </h2> </td> </tr>
             <tr> <td> <h2 style='color:#0c08ff' class="GBP" align="center"> GBP: </h2></td> <td><h2 style='color:#0c08ff' class="GBP" align="center">{{ GBP }} </h2> </td> </tr>
+            <tr> <td> <h2 style='color:#0c08ff' class="RUB" align="center"> RUB: </h2></td> <td><h2 style='color:#0c08ff' class="RUB" align="center">{{ RUB }} </h2> </td> </tr>
 
         </table>
 
@@ -43,7 +44,8 @@
             <input type="submit" value="Convert" >
         </form>
 
-            <strong style="font-size: 35px"> Amount is: {{ Summa }}  </strong>
+            </br></br></br>
+            <strong style="font-size: 50px"> Amount is: {{ Summa }}  </strong>
 
         </div>
 
